update post api
