# apis/post/postApi.js
@@ -6,10 +6,10 @@ const {checkRequiredFieldInBody} = require('../../middleware')
 const PostService = require('../../services/postService/postService')
 
 const { verifyToken,adminRole } = require('../../middleware/verifyToken')
-
 const postApi = express.Router()
 const mysqlDb = new MysqlDB()
 const postService = new PostService(mysqlDb)
+
 
 postApi.get('/', async (req, res, next) => {
     try {
@@ -32,27 +32,66 @@ postApi.get('/:id', async (req, res, next) => {
         return res.status(500).json({status:500,message: error})
     }
 })
+postApi.get('/get-by-slug/:slug', async (req, res, next) => {
+    try {
+        let {slug} = req.params
+        const postFounded = await postService.getPostBySlug(slug)
 
-postApi.post('/',verifyToken,adminRole,
-    checkRequiredFieldInBody(['title', 'content','category_id']),
-    async (req, res, next) => {
+        return res.status(200).json({status:200,message:"Success",data:postFounded})
+    } catch (error) {
+        return res.status(500).json({status:500,message: error})
+    }
+})
+postApi.get('/get-by-tag-id/:tag_id', async (req, res, next) => {
+    try {
+        let {tag_id} = req.params
+        const postFounded = await postService.getPostByTagId(tag_id)
+
+        return res.status(200).json({status:200,message:"Success",data:postFounded})
+    } catch (error) {
+        return res.status(500).json({status:500,message: error})
+    }
+})
+postApi.get('/get-by-tag-name/:name', async (req, res, next) => {
+    try {
+        let {name} = req.params
+        const postFounded = await postService.getPostByTagName(id)
+
+        return res.status(200).json({status:200,message:"Success",data:postFounded})
+    } catch (error) {
+        return res.status(500).json({status:500,message: error})
+    }
+})
+postApi.get('/get-by-tag-slug/:tag_slug', async (req, res, next) => {
+    try {
+        let {tag_slug} = req.params
+        const postFounded = await postService.getPostByTagSlug(tag_slug)
+
+        return res.status(200).json({status:200,message:"Success",data:postFounded})
+    } catch (error) {
+        return res.status(500).json({status:500,message: error})
+    }
+})
+
+postApi.post('/',verifyToken,adminRole,checkRequiredFieldInBody(['title', 'content']),async (req, res, next) => {
+        
         try {
-            let {title,image,description, content,category_id} = req.body
-            const insertedId = await postService.createPost(title,image,description, content,category_id)
+            let {title,url_image, content,tag_id} = req.body
+            const insertedId = await  postService.createPost(title,url_image,content,tag_id)
 
             return res.status(200).json({status:200,message: 'Create new post successfully'})
         } catch (error) {
             return res.status(500).json({status:500,message: error})
         }
-    })
+})
 
 postApi.put('/:id',verifyToken,adminRole,
     checkRequiredFieldInBody(['title', 'content']),
     async (req, res, next) => {
         let {id} = req.params
         try {
-            let {title,image,description, content,category_id} = req.body
-            await postService.updatePost(id, title,image,description, content,category_id)
+            let {title,url_image, content,tag_id} = req.body
+            await postService.updatePost(id, title,url_image, content,tag_id)
 
             return res.status(200).json({message: 'updated post successfully'})
         } catch (error) {
