# swagger.json
@@ -95,10 +95,7 @@
                 "title": {
                   "type": "string"
                 },
-                "image": {
-                  "type": "string"
-                },
-                "description": {
+                "url_image": {
                   "type": "string"
                 },
                 "content": {
@@ -207,10 +204,7 @@
                 "title": {
                   "type": "string"
                 },
-                "image": {
-                  "type": "string"
-                },
-                "description": {
+                "url_image": {
                   "type": "string"
                 },
                 "content": {
@@ -274,6 +268,117 @@
             "description": "success",
             "schema": {
               "$ref": "#/definitions/success"
+            }
+          },
+          "500": {
+            "description": "error",
+            "schema": {
+              "$ref": "#/definitions/error"
+            }
+          }
+        }
+      }
+    },
+    "/post/get-by-slug/{slug}": {
+      "get": {
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "slug",
+            "type": "string",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "tags": [
+          "Post Api"
+        ],
+        "summary": "Get Post by Id",
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "success",
+            "schema": {
+              "$ref": "#/definitions/post"
+            }
+          },
+          "500": {
+            "description": "error",
+            "schema": {
+              "$ref": "#/definitions/error"
+            }
+          }
+        }
+      }
+    },
+    "/post/get-by-tag-id/{tag_id}": {
+      "get": {
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "tag_id",
+            "type": "integer",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "tags": [
+          "Post Api"
+        ],
+        "summary": "Get Post by Tag Id",
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "success",
+            "schema": {
+              "$ref": "#/definitions/post"
+            }
+          },
+          "500": {
+            "description": "error",
+            "schema": {
+              "$ref": "#/definitions/error"
+            }
+          }
+        }
+      }
+    },
+    "/post/get-by-tag-slug/{tag_slug}": {
+      "get": {
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "tag_slug",
+            "type": "string",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "tags": [
+          "Post Api"
+        ],
+        "summary": "Get post by Tag slug",
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "success",
+            "schema": {
+              "$ref": "#/definitions/post"
             }
           },
           "500": {
@@ -2560,8 +2665,8 @@
         "image": {
           "type": "string"
         },
-        "category_id": {
-          "$ref": "#/definitions/category"
+        "tag_id": {
+          "$ref": "#/definitions/tag"
         },
         "created_at": {
           "type": "string",
